--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
 
 body {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0px;
     padding: 0px;
+    background-color: #5C413F;
 } 
 
 .logo {
-    margin-top: 50px;
+    padding-top: 50px;
+    margin-bottom: -50px;
+    align-self: center;
+    max-width: 200px;
 }
 
 .fundo {
@@ -15,18 +21,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(45deg, black, #5C413F);
+    background-color: #5C413F;
     height: 100vh;
     color: white;
     font-family: 'Asap Condensed', sans-serif;
 }
 
 .calculadora {
-    margin-top: 100px;
+    /* margin-top: 100px; */
     position: absolute;
     background-image: linear-gradient(45deg, rgba(197, 197, 197, 0.3), #acacac);    
     border-radius: 5px;
     padding: 3px;
+    margin-top: 0px;
     
 
 }
@@ -78,9 +85,3 @@ button {
     border: none;
 }
 
-.botao:disabled,
-.botao[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
-}
