--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
 
+
+@media only screen and (max-device-width: 600px) {
+    .calculadora {margin: 10px }
+    .logo {margin-bottom: 0px;}
+}
+
+
 body {
     display: flex;
     flex-direction: column;
