--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap');
 
 
-@media only screen and (max-device-width: 900px) {
-    .calculadora {margin: 10px }
-    .logo {margin-bottom: 10px;}
-}
-@media only screen and (max-device-width: 600px) {
-    .calculadora {width: 80vw }
-    .logo {margin-bottom: 10px;}
+.div-1 {
+    display: flex;
+    justify-content: center;
+    z-index: 1;    
 }
 
 body {
+    display: grid;
+    /* grid-template: min(50px) 1fr / 1fr;  */
+    grid-template-columns: minmax(300px, 1fr);
+    grid-template-rows: repeat(2, minmax(200px, auto));
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
+    background-color: #5C413F;
+    height: 100vh;
+    overflow: scroll ;
+} 
+/* body {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0px;
     padding: 0px;
     background-color: #5C413F;
-} 
+}  */
 
 .logo {
     padding-top: 50px;
-    margin-bottom: -50px;
+    margin-bottom: 50px;
     align-self: center;
     max-width: 200px;
 }
