--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,23 @@ button {
     border: none;
 }
 
+/* Responsive CSS */
+@media (max-width: 600px) {
+    body {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, minmax(200px, auto));
+    }
+    .logo {
+    max-width: 150px;
+    }
+    .botao {
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    }
+    #resultado {
+    width: 150px;
+    font-size: 20px;
+    }
+    }
+
